# Book-Writer-with-CrewAI

./: README.md  book.md  pyproject.toml
src/book_writer/: crew.py  main.py
src/book_writer/crew/outline_crew/: outline_crew.py
src/book_writer/crew/outline_crew/config/: agents.yaml  tasks.yaml
src/book_writer/crew/writer_crew/: writer_crew.py
src/book_writer/crew/writer_crew/config/: agents.yaml  tasks.yaml
src/book_writer/tools/: custom_tool.py
writer/: package-lock.json  package.json
