[project]
name = "book_writer"
version = "0.1.0"
description = "book_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
book_writer = "book_writer.main:run"
run_crew = "book_writer.main:run"
train = "book_writer.main:train"
replay = "book_writer.main:replay"
test = "book_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
